DEV-2665: now speak of Jetty instead of Tomcat.

--- a/dso/branches/3.0/code/base/ui-configurator/src.resources/org/terracotta/ui/session/ConfiguratorIntro.html
+++ b/dso/branches/3.0/code/base/ui-configurator/src.resources/org/terracotta/ui/session/ConfiguratorIntro.html
@@ -25,14 +25,14 @@
 
 Use Configurator to setup Terracotta Sessions to cluster your existing
 session-based web application.&nbsp;  Configurator provides a testing
-environment complete with an installation of Apache Tomcat for clustering two
+environment complete with an installation of Jetty for clustering two
 instances of a web application.<br><br>
 
 The basic process is:<ol>
 
 <li>Validate Unclustered WebApp</li>
 Import your web application into Configurator and verify that it runs
-correctly on Tomcat or other web containers you have specified.&nbsp;
+correctly in Jetty.&nbsp;
 In case you do not have access to a webapp of your own,
 Terracotta provides a couple of sample webapps.<br><br>
 
@@ -44,10 +44,10 @@ configured to run clustered.<br><br>
 
 <li>Check Clustering and Fail-Over</li>
 Use Configurator's real-time monitor to verify clustering of session data and
-then shut down one of the Tomcat servers to verify session data is properly
+then shut down one of the Jetty servers to verify session data is properly
 maintained.<br>
 
-</ol>
+</ol><br>
 
 You are now ready to deploy your webapp with Terracotta Sessions and
 scale-out across a large number of servers.
