--- a/dso/branches/h2lc-dev-tool/kits/skeletons/eclipse-web-site/common/description.html
+++ b/dso/branches/h2lc-dev-tool/kits/skeletons/eclipse-web-site/common/description.html
@@ -1,21 +1,17 @@
 <!--
-
  All content copyright Terracotta, Inc., unless otherwise indicated. All rights reserved.
-
-
-
 -->
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>org.terracotta.dso</title>
+<title>org.terracotta</title>
 </head>
 
 <body>
 <h1>About This Content</h1>
 
-<p>April 6, 2007
+<p>April 6, 2009
 <p>License
 <br>
 <p>
