--- a/dso/branches/h2lc-dev-tool/kits/skeletons/eclipse-web-site/common/index.html
+++ b/dso/branches/h2lc-dev-tool/kits/skeletons/eclipse-web-site/common/index.html
@@ -1,18 +1,14 @@
 <!--
-
  All content copyright Terracotta, Inc., unless otherwise indicated. All rights reserved.
-
-
-
 -->
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <!-- - - - - - - - - - - - - - - - - -->
-<!--  Terracotta DSO Eclipse Plug-in -->
+<!--  Terracotta Eclipse Plug-ins  - -->
 <!-- - - - - - - - - - - - - - - - - -->
 <html>
 <head>
-<title>Terracotta DSO Eclipse Plug-in</title>
+<title>Terracotta Eclipse Plug-ins</title>
 <meta http-equiv="refresh" content="0;url=http://www.terracotta.org/kit/reflector?kitID=3.0&pageID=EclipsePluginQuickStart">
 </head>
 <body>
