--- a/dso/branches/3.1/code/base/deploy/src.resources/com/tc/admin/MyApplication.html
+++ b/dso/branches/3.1/code/base/deploy/src.resources/com/tc/admin/MyApplication.html
@@ -32,7 +32,7 @@
 	<li>A configuration generator</li>
 </ul>
 <p>Note that the settings you change in the Second-Level Cache view are not saved to the cache configuration file and are not persisted beyond the lifetime of the cache.</p>
-<p>For more information on testing and tuning the Terracotta Second-Level Cache for Hibernate, see <a href="http://www.terracotta.org/tuning" rel="nofollow">http://www.terracotta.org/tuning</a> second-level cache.</p>
+<p>For more information on testing and tuning the Terracotta Second-Level Cache for Hibernate, see <a href="http://www.terracotta.org/tuning+second-level+cache" rel="nofollow">http://www.terracotta.org/tuning+second-level+cache</a> second-level cache.</p>
 <h3><a name="HibViewsDevConsoleGuideaddition-HibernateView"></a>Hibernate View</h3>
 <p>The Hibernate view displays Hibernate statistics. Some of the main tasks you can perform in this view are: </p>
 <ul>
