--- a/license-generator/index.html
+++ b/license-generator/index.html
@@ -9,6 +9,8 @@
       <p>
         This is a java webstart GUI program that will help generating Terracotta Enterprise licenses.
       </p>
-      <a href="resources/webstart.jnlp"><span style="font-weight: bold, font-size: 15pt">Launch License Generator</span></a>
+	  <ul>
+        <li><a href="resources/webstart.jnlp"><span style="font-weight: bold, font-size: 15pt">Launch License Generator</span></a></li>
+      </ul>
     </body>
 </html>
