webstart binaries for ehcache license generator

--- a/license-generator/index.html
+++ b/license-generator/index.html
@@ -7,10 +7,11 @@
     <body>
       <img src="resources/logo.png"/>
       <p>
-        This is a java webstart GUI program that will help generating Terracotta Enterprise licenses.
+        License generation tools:
       </p>
 	  <ul>
-        <li><a href="resources/webstart.jnlp"><span style="font-weight: bold, font-size: 15pt">Launch License Generator</span></a></li>
+        <li><a href="resources/webstart.jnlp"><span style="font-weight: bold, font-size: 15pt">Launch Terracotta License Generator</span></a></li>
+        <li><a href="resources/ehcache-license-generator-webstart.jnlp"><span style="font-weight: bold, font-size: 15pt">Launch Ehcache License Generator</span></a></li>
       </ul>
     </body>
 </html>
